2007-12-19  Hubert Figuiere  <hub@figuiere.net>

	* exempi/tests/*, configure.ac: detect valgrind.
	Add leak detection support.

2007-12-17  Hubert Figuiere  <hub@figuiere.net>

	* autogen.sh: added for convenience for non-tarball builders.
	(Closes #13707)

2007-12-16  Hubert Figuiere  <hub@figuiere.net>

	* exempi/*: added new API for get/set datetime.

	* exempi/tests/*: refactor the test preparation.

2007-11-13  Hubert Figuiere  <hub@figuiere.net>

	* exempi/tests/*.c: Add a bunch of include deemed necessary 
	by suse factory.
	* Add a bunch of include deemed necessary by suse factory.

2007-11-08  Hubert Figuiere  <hub@figuiere.net>

	* source/XMPFiles/FormatSupport/Makefile.am: add
	-Wno-multichar to remove warnings.
	QuickTime_Support.cpp is in the dist as a noinst_HEADER
