@@ -126,10 +126,9 @@ void test_xmpfiles()
 
 	XmpPtr xmp = xmp_new_empty();
 
+	BOOST_CHECK(xmp != NULL);
 	
 	BOOST_CHECK(xmp_files_get_xmp(f, xmp));
-
-	BOOST_CHECK(xmp != NULL);
 
 	XmpStringPtr the_prop = xmp_string_new();
 
@@ -147,6 +146,43 @@ void test_xmpfiles()
 }
 
 
+/**  See http://www.adobeforums.com/webx/.3bc42b73 for the orignal
+ *   test case */
+void 
+test_tiff_leak()
+{
+	std::string orig_tiff_file = g_src_testdir 
+		+ "../../samples/BlueSquares/BlueSquare.tif";
+	std::string command = "cp ";
+	command += orig_tiff_file + " test.tif";
+	BOOST_CHECK(system(command.c_str()) >= 0);
+
+	BOOST_CHECK(xmp_init());
+
+	XmpFilePtr f = xmp_files_open_new("test.tif", XMP_OPEN_FORUPDATE);
+
+	BOOST_CHECK(f != NULL);
+	if (f == NULL) {
+		return;
+	}
+
+	XmpPtr xmp;
+	
+	BOOST_CHECK(xmp = xmp_files_get_new_xmp(f));
+	BOOST_CHECK(xmp != NULL);
+
+	xmp_set_localized_text(xmp, NS_DC, "description", "en", "en-US", "foo", 0);
+	BOOST_CHECK(xmp_files_put_xmp(f, xmp));
+	BOOST_CHECK(xmp_files_close(f, XMP_CLOSE_NOOPTION));
+	BOOST_CHECK(xmp_free(xmp));
+	BOOST_CHECK(xmp_files_free(f));
+	xmp_terminate();
+
+	BOOST_CHECK(unlink("test.tif") == 0);
+	BOOST_CHECK(!g_lt->check_leaks());
+	BOOST_CHECK(!g_lt->check_errors());	
+}
+
 
 test_suite*
 init_unit_test_suite( int argc, char * argv[] ) 
@@ -157,6 +193,7 @@ init_unit_test_suite( int argc, char * argv[] )
 	
 	test->add(BOOST_TEST_CASE(&test_xmpfiles));
 	test->add(BOOST_TEST_CASE(&test_xmpfiles_write));
+	test->add(BOOST_TEST_CASE(&test_tiff_leak));
 	
     return test;
 }
